applications/proxy/paperless/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: paperless-proxy
spec:
  ports:
  - name: app
    port: 80
    protocol: TCP
    targetPort: 8220
  clusterIP: None
  type: ClusterIP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: paperless-proxy
subsets:
- addresses:
  - ip: 192.168.178.47
  ports:
  - name: app
    port: 8227
    protocol: TCP
