applications/proxy/paperless/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: https
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-basic-auth-middleware@kubernetescrd
  name: paperless-ingress
spec:
  rules:
    - host: paperless.home.juli.sh
      http:
        paths:
          - backend:
              service:
                name: paperless-proxy
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - paperless.home.juli.sh
      secretName: paperless-tls
status:
  loadBalancer: {}
